@@ -184,7 +184,7 @@ camera_prepare_canon_eos_capture(Camera *camera, GPContext *context) {
 	}
 	startup9110[0] = 0x0c; startup9110[1] = 0x00; startup9110[2] = 0x00; startup9110[3] = 0x00;
 	startup9110[4] = 0x1c; startup9110[5] = 0xd1; startup9110[6] = 0x00; startup9110[7] = 0x00;
-	startup9110[8] = 0x01; startup9110[9] = 0x00; startup9110[10] = 0x00; startup9110[11] = 0x00;
+	startup9110[8] = 0x04; startup9110[9] = 0x00; startup9110[10] = 0x00; startup9110[11] = 0x00;
 	ret = ptp_canon_eos_setdevicepropvalueex (params, startup9110, 12);
 	if (ret != PTP_RC_OK) {
 		gp_log (GP_LOG_ERROR,"ptp2_prepare_eos_capture", "9110 of d11c to 1 failed!");
@@ -215,7 +215,7 @@ camera_prepare_canon_eos_capture(Camera *camera, GPContext *context) {
 		gp_log (GP_LOG_ERROR,"ptp2_prepare_eos_capture", "9110 of d11c to 4 failed!");
 		return GP_ERROR;
 	}
-	ret = ptp_canon_eos_pchddcapacity (params, 0x001dfc60, 0x1000, 0x1);
+	ret = ptp_canon_eos_pchddcapacity (params, 0x02222222, 0x1000, 0x1);
 	if (ret != PTP_RC_OK) {
 		gp_log (GP_LOG_ERROR,"ptp2_prepare_eos_capture", "911a to 0x001dfc60 failed!");
 		return GP_ERROR;
