@@ -1,3 +1,8 @@
+2008-04-11  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c, config.c: Added EOS 450D capture mode.
+	  Changed setting of 0xd11c EOS property from 1 to 4.
+
 2008-03-31  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp.c, ptp.h, config.c: Try to fix EOS capture preparation,
